# PyCad

./: .gitignore  .kateproject  README  README.md  kateproject
PyCad/: Dispatcher.py  InteractiveViewer.py  ObjectGroup.py  Project.py  __init__.py  calc.py  gen.py  modelling.py  op.py  testViewer.py
cpplib/: CMakeLists.txt  base.cc  base.h  calc.cc  calc.h  color.cc  color.h  export.cc  export.h  gen.cc  gen.h  objects.cc  objects.h  op.cc  op.h  vec.h
cpplib/py/: PyCadCpp.sip  basetypes.sip  configure.py
cpplib/viewer/: navigationHandler.cc  navigationHandler.h  occ_helper.cc  occ_helper.h  qtviewer.cc  qtviewer.h  viewobject.cc  viewobject.h
doc/examples/: samples.md
mkdoc/: mkexamples.py
mkdoc/src/: 10_solids.py  11_csg.py  20_wires.py  21_shells.py  21_wires_adv.py  25_shells.py  30_extrusion.py  40_fillets.py  50_pipes.py
